# belgrade-internship-cmake

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
project/: CMakeLists.txt
project/lib-a/include/lib_a/: library.hpp
project/lib-a/src/: library.cpp
project/lib-a/test/: test.cpp
project/lib-b/include/lib_b/: library.hpp
project/lib-b/src/: library.cpp
project/lib_a/: CMakeLists.txt
project/lib_a/include/lib_a/: library.hpp
project/lib_a/src/: library.cpp
project/lib_a/test/: CMakeLists.txt  lib_a_test.cpp
project/lib_b/: CMakeLists.txt
project/lib_b/include/lib_b/: library.hpp
project/lib_b/src/: library.cpp
project/lib_b/test/: CMakeLists.txt  lib_b_test.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
